@@ -1,4 +1,5 @@
 Development
+    Fix problem when starting an hrefid and over cache
 0.0.3   Mar 12, 2007
     Fix up install issues
     Switch to using controlid when using GNOME MPlayer allows control of hidden windows
